Remove uneccesary stuff and simplify the review apps skipping branches

--- a/.github/workflows/fly_review.yml
+++ b/.github/workflows/fly_review.yml
@@ -3,6 +3,8 @@ on:
   # Run this workflow on every PR event. Existing review apps will be updated when the PR is updated.
   pull_request:
     types: [opened, reopened, synchronize, closed]
+    branches-ignore:
+      - "update-screenshot-**"
 
 env:
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
@@ -25,7 +27,6 @@ jobs:
       name: review
       # The script in the `deploy` sets the URL output for each review app.
       url: ${{ steps.deploy.outputs.url }}
-    if: ${{ !startsWith(github.head_ref || github.ref_name, 'update-screenshot-') }}
     steps:
       - name: Debug
         run: |
