--- a/.github/workflows/shots.yml
+++ b/.github/workflows/shots.yml
@@ -64,6 +64,9 @@ jobs:
           git config --global user.name "Coreyja Workflow Automation"
           git commit -m "Update daily screenshots for ${{ steps.date.outputs.date }}"
           git push --set-upstream origin update-screenshot-${{ steps.date.outputs.date }}
+      - name: Install OIDC Client from Core Package
+        if: steps.git-check.outputs.changes > 0
+        run: npm install @actions/core@1.6.0 @actions/http-client
       - name: Get Id Token
         if: steps.git-check.outputs.changes > 0
         uses: actions/github-script@v6
