--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -86,6 +86,8 @@ rsa = "0.9.4"
 rand = "0.8.5"
 color-eyre = "0.6.3"
 two-face = "0.4.0"
+poise = "0.6.1"
+serenity = "0.12.2"
 
 [build-dependencies]
 vergen = { version = "8.0.0", features = ["git", "gitoxide", "rustc"] }
