--- a/db/Cargo.toml
+++ b/db/Cargo.toml
@@ -10,6 +10,8 @@ chrono.workspace = true
 sqlx = { workspace = true }
 tracing = { workspace = true }
 color-eyre = "0.6.3"
+uuid = { workspace = true }
+serde = { workspace = true }
 
 [lints]
 workspace = true
