--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -47,7 +47,7 @@ sentry = { version = "0.31.5", default-features = false, features = [
   "reqwest",
 ] }
 sentry-tower = { version = "0.31.5", features = ["http"] }
-serde = { workspace = true }
+serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 serde_urlencoded = "0.7.1"
 syntect = "5.0"
@@ -88,6 +88,8 @@ color-eyre = "0.6.3"
 two-face = "0.4.0"
 poise = "0.6.1"
 serenity = "0.12.2"
+regex = "1.11.1"
+rsky-lexicon = { git = "https://github.com/blacksky-algorithms/rsky" }
 
 [build-dependencies]
 vergen = { version = "8.0.0", features = ["git", "gitoxide", "rustc"] }
