--- a/.github/workflows/rust_tests.yml
+++ b/.github/workflows/rust_tests.yml
@@ -18,8 +18,6 @@ jobs:
     runs-on: ubuntu-latest
     env:
       CARGO_INCREMENTAL: 0
-      SCCACHE_GHA_ENABLED: "true"
-      RUSTC_WRAPPER: "sccache"
     steps:
       - name: Setup | Checkout
         uses: actions/checkout@v2
@@ -27,11 +25,11 @@ jobs:
         with:
           packages: protobuf-compiler libasound2-dev
           version: v0
-      - uses: dtolnay/rust-toolchain@stable
+      - name: Install rust
+        uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
-          components: rustfmt clippy
-      - name: Run sccache-cache
-        uses: mozilla-actions/sccache-action@v0.0.3
+          components: rustfmt, clippy
+      - uses: Swatinem/rust-cache@v2
       - run: |
           curl -sLO https://github.com/tailwindlabs/tailwindcss/releases/latest/download/tailwindcss-linux-x64 && \
           chmod +x tailwindcss-linux-x64 && \
@@ -44,8 +42,6 @@ jobs:
     runs-on: ubuntu-latest
     env:
       CARGO_INCREMENTAL: 0
-      SCCACHE_GHA_ENABLED: "true"
-      RUSTC_WRAPPER: "sccache"
     steps:
       - name: Setup | Checkout
         uses: actions/checkout@v2
@@ -53,9 +49,9 @@ jobs:
         with:
           packages: protobuf-compiler libasound2-dev
           version: v0
-      - uses: dtolnay/rust-toolchain@stable
-      - name: Run sccache-cache
-        uses: mozilla-actions/sccache-action@v0.0.3
+      - name: Install rust
+        uses: actions-rust-lang/setup-rust-toolchain@v1
+      - uses: Swatinem/rust-cache@v2
       - run: |
           curl -sLO https://github.com/tailwindlabs/tailwindcss/releases/latest/download/tailwindcss-linux-x64 && \
           chmod +x tailwindcss-linux-x64 && \
@@ -67,8 +63,6 @@ jobs:
     name: Test
     env:
       CARGO_INCREMENTAL: 0
-      SCCACHE_GHA_ENABLED: "true"
-      RUSTC_WRAPPER: "sccache"
     strategy:
       fail-fast: false
       matrix:
@@ -87,15 +81,15 @@ jobs:
     steps:
       - name: Setup | Checkout
         uses: actions/checkout@v2
-      - uses: dtolnay/rust-toolchain@master
+      - name: Install rust
+        uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: ${{ matrix.rust }}
+      - uses: Swatinem/rust-cache@v2
       - uses: awalsh128/cache-apt-pkgs-action@latest
         with:
           packages: protobuf-compiler libasound2-dev
           version: v0
-      - name: Run sccache-cache
-        uses: mozilla-actions/sccache-action@v0.0.3
       - run: |
           curl -sLO https://github.com/tailwindlabs/tailwindcss/releases/latest/download/tailwindcss-linux-x64 && \
           chmod +x tailwindcss-linux-x64 && \
