--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -25,6 +25,7 @@ async-trait = "0.1.60"
 axum = "0.7.1"
 axum-macros = "0.4.0"
 chrono = { workspace = true }
+chrono-tz = "0.9"
 clap = { workspace = true }
 include_dir = { workspace = true }
 indoc = "2.0"
