--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["cja", "db", "posts", "server", "tracing-common"]
+members = ["db", "posts", "server", "tracing-common"]
 resolver = "2"
 
 [workspace.lints.clippy]
@@ -53,7 +53,7 @@ markdown = "1.0.0-alpha"
 include_dir = { version = "0.7.3", features = ["metadata", "glob"] }
 path-absolutize = "3.0"
 
-sqlx = { version = "0.7", features = [
+sqlx = { version = "0.8.6", features = [
   "postgres",
   "runtime-tokio-rustls",
   "chrono",
