--- a/fly.toml
+++ b/fly.toml
@@ -30,6 +30,7 @@ force_https = true
 [[services.ports]]
 port = 443
 handlers = ["tls", "http"]
+
 [services.concurrency]
 type = "connections"
 hard_limit = 25
@@ -40,3 +41,7 @@ interval = "15s"
 timeout = "2s"
 grace_period = "1s"
 restart_limit = 0
+
+[[vm]]
+size = "shared-cpu-1x"
+memory = "2gb"
