--- a/db/Cargo.toml
+++ b/db/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 chrono.workspace = true
 sqlx = { workspace = true }
 tracing = { workspace = true }
-color-eyre = "0.6.3"
+color-eyre = { workspace = true }
 uuid = { workspace = true }
 serde = { workspace = true }
 
