--- a/openai/Cargo.toml
+++ b/openai/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2021"
 [dependencies]
 tracing = { workspace = true }
 reqwest = { workspace = true }
-color-eyre = "0.6.3"
+color-eyre = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
