--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,7 +72,7 @@ axum-extra = "0.10.1"
 axum-macros = "0.5.0"
 chrono-humanize = "0.2.3"
 chrono-tz = "0.9"
-cja = { git = "https://github.com/coreyja/cja", branch = "push-yovlunvpwstm" }
+cja = { git = "https://github.com/coreyja/cja", branch = "main" }
 color-eyre = "0.6.3"
 db = { path = "db" }
 debug-ignore = "1.0.5"
