--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,3 +65,46 @@ sqlx = { version = "0.8.6", features = [
 uuid = { version = "1.6.1", features = ["v4", "serde"] }
 
 base64 = "0.21.7"
+age = "0.9.2"
+async-trait = "0.1.60"
+axum = "0.8.4"
+axum-extra = "0.10.1"
+axum-macros = "0.5.0"
+chrono-humanize = "0.2.3"
+chrono-tz = "0.9"
+cja = { git = "https://github.com/coreyja/cja", branch = "main" }
+color-eyre = "0.6.3"
+db = { path = "db" }
+debug-ignore = "1.0.5"
+futures = "0.3.29"
+google-youtube3 = "5.0.3"
+gql_client = { git = "https://github.com/coreyja/gql-client-rs", rev = "d3bcd33" }
+graphql_client = "0.13.0"
+indoc = "2.0"
+itertools = "0.12.0"
+jsonwebtoken = "9.1.0"
+maud = "0.27.0"
+mime_guess = "2.0"
+openai = { path = "openai" }
+poise = "0.6.1"
+posts = { path = "posts" }
+rand = "0.8.5"
+regex = "1.11.1"
+rsa = "0.9.4"
+rsky-lexicon = { git = "https://github.com/blacksky-algorithms/rsky" }
+sentry = { version = "0.31.5", default-features = false }
+sentry-tower = "0.31.5"
+sentry-tracing = "0.31.8"
+serde_urlencoded = "0.7.1"
+serde_yaml = "0.9"
+serenity = "0.12.2"
+syntect = "5.0"
+thiserror = "1.0.44"
+tower = "0.4.13"
+tower-cookies = "0.11.0"
+tower-http = "0.5.0"
+two-face = "0.4.0"
+typify = "0.0.14"
+url = "2.5.0"
+urlencoding = "2.1"
+vergen = "8.0.0"
