Use AI to make the standup message

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -84,6 +84,7 @@ serenity = { workspace = true }
 regex = { workspace = true }
 rsky-lexicon = { workspace = true }
 axum-extra = { workspace = true }
+rig-core = { workspace = true }
 
 [build-dependencies]
 vergen = { workspace = true, features = ["git", "gitoxide", "rustc"] }
