--- a/Cargo.toml
+++ b/Cargo.toml
@@ -108,3 +108,6 @@ typify = "0.0.14"
 url = "2.5.0"
 urlencoding = "2.1"
 vergen = "8.0.0"
+rig-core = { version = "0.14.0", default-features = false, features = [
+  "reqwest-rustls",
+] }
