--- a/db/Cargo.toml
+++ b/db/Cargo.toml
@@ -12,6 +12,7 @@ tracing = { workspace = true }
 color-eyre = { workspace = true }
 uuid = { workspace = true }
 serde = { workspace = true }
+serde_json = { workspace = true }
 
 [lints]
 workspace = true
