--- a/thread-frontend/package.json
+++ b/thread-frontend/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@tanstack/react-router": "^1.127.8",
     "@tanstack/react-start": "^1.127.8",
+    "@xyflow/react": "^12.8.2",
+    "axios": "^1.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "vite": "^7.0.4"
