--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -37,7 +37,14 @@ opentelemetry-otlp = { workspace = true }
 path-absolutize = { workspace = true }
 reqwest = { workspace = true }
 rss = { workspace = true }
-sentry = { workspace = true, features = ["rustls", "backtrace", "contexts", "panic", "tower", "reqwest"] }
+sentry = { workspace = true, features = [
+  "rustls",
+  "backtrace",
+  "contexts",
+  "panic",
+  "tower",
+  "reqwest",
+] }
 sentry-tower = { workspace = true, features = ["http"] }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
@@ -46,7 +53,7 @@ syntect = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
 tower = { workspace = true }
-tower-http = { workspace = true, features = ["trace"] }
+tower-http = { workspace = true, features = ["trace", "cors"] }
 tracing = { workspace = true }
 tracing-opentelemetry = { workspace = true }
 tracing-subscriber = { workspace = true }
@@ -77,6 +84,7 @@ futures = { workspace = true }
 chrono-humanize = { workspace = true }
 rsa = { workspace = true }
 rand = { workspace = true }
+rig-core = { workspace = true }
 color-eyre = { workspace = true }
 two-face = { workspace = true }
 poise = { workspace = true }
@@ -84,7 +92,6 @@ serenity = { workspace = true }
 regex = { workspace = true }
 rsky-lexicon = { workspace = true }
 axum-extra = { workspace = true }
-rig-core = { workspace = true }
 
 [build-dependencies]
 vergen = { workspace = true, features = ["git", "gitoxide", "rustc"] }
