--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -52,7 +52,7 @@ serde_urlencoded = { workspace = true }
 syntect = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
-tower = { workspace = true }
+tower = { workspace = true, features = ["util"] }
 tower-http = { workspace = true, features = ["trace", "cors"] }
 tracing = { workspace = true }
 tracing-opentelemetry = { workspace = true }
