--- a/thread-frontend/package.json
+++ b/thread-frontend/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-router": "^1.127.8",
     "@tanstack/react-start": "^1.127.8",
     "@xyflow/react": "^12.8.2",
