--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -84,7 +84,6 @@ futures = { workspace = true }
 chrono-humanize = { workspace = true }
 rsa = { workspace = true }
 rand = { workspace = true }
-rig-core = { workspace = true }
 color-eyre = { workspace = true }
 two-face = { workspace = true }
 poise = { workspace = true }
@@ -92,6 +91,9 @@ serenity = { workspace = true }
 regex = { workspace = true }
 rsky-lexicon = { workspace = true }
 axum-extra = { workspace = true }
+schemars = "1.0.4"
+const_panic = "0.2.12"
+static_assertions = "1.1.0"
 
 [build-dependencies]
 vergen = { workspace = true, features = ["git", "gitoxide", "rustc"] }
