--- a/thread-frontend/package.json
+++ b/thread-frontend/package.json
@@ -28,7 +28,8 @@
     "axios": "^1.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "vite": "^7.0.4"
+    "vite": "^7.0.4",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.31.0",
