--- a/.github/workflows/frontend-tests-reusable.yml
+++ b/.github/workflows/frontend-tests-reusable.yml
@@ -1,11 +1,7 @@
-name: Frontend Tests
+name: Frontend Tests (Reusable)
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    types: [opened, synchronize]
+  workflow_call:
 
 jobs:
   lint:
@@ -100,6 +96,6 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
-          path: coverage
+          path: thread-frontend/coverage
           retention-days: 7
           if-no-files-found: warn
