Implement Linear Agent OAuth integration
- Add database tables for Linear installations and webhook events
- Implement OAuth flow endpoints with actor=app for agent authentication
- Add Linear OAuth button to admin interface
- Create webhook handler for agent session events
- Configure Linear environment variables
- Add required crypto dependencies (hmac, sha2, hex)

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -94,6 +94,9 @@ axum-extra = { workspace = true }
 schemars = "1.0.4"
 const_panic = "0.2.12"
 static_assertions = "1.1.0"
+hmac = "0.12.1"
+sha2 = "0.10.9"
+hex = "0.4.3"
 
 [build-dependencies]
 vergen = { workspace = true, features = ["git", "gitoxide", "rustc"] }
