Disable Discord bot in Playwright tests CI
Added DISCORD_BOT_DISABLED=true to the playwright_tests.yml workflow to prevent the server from attempting to connect to Discord during E2E tests. This eliminates the need for a real Discord token in CI.

--- a/.github/workflows/playwright_tests.yml
+++ b/.github/workflows/playwright_tests.yml
@@ -37,6 +37,7 @@ env:
   GOOGLE_CLIENT_ID: test-google-client-id
   GOOGLE_CLIENT_SECRET: test-google-client-secret
   DISCORD_TOKEN: test-discord-token
+  DISCORD_BOT_DISABLED: true
   COOKIE_KEY: test-cookie-key-32-bytes-long!!!!
 
 jobs:
