Add ready status check to CI

--- a/.github/workflows/rust_tests.yml
+++ b/.github/workflows/rust_tests.yml
@@ -119,3 +119,18 @@ jobs:
         run: cargo binstall --no-confirm cargo-deny
       - name: Cargo Deny
         run: cargo-deny check bans
+
+  ready:
+    if: always()
+    needs: [lint, doc, test, cargo-deny]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check results
+        run: |
+          results="${{ join(needs.*.result, ' ') }}"
+          for result in $results; do
+            if [[ "$result" != "success" ]]; then
+              echo "Job result: $result (expected success)"
+              exit 1
+            fi
+          done
